@@ -1,8 +1,15 @@
+2002-01-27 Alexander Rawass <alexannika@users.sourceforge.net>
+	
+	* wrote Order AIPatrol that can patrol around an area/unit
+	  uses modules/ai_patrol.c
+
+	
 2002-01-26 Daniel Horn <hellcatv@hotmail.com>
 	* fixed bug that about 1 in 1000 units leaves a ghost behind on the collide board.
 	* scans entire collide table when a unit is leaving systems or dying
 	* testing with missions/totalwar2.mission
 	
+
 2002-01-26 Alexander Rawass <alexannika@users.sourceforge.net>
 	
 	* updated systems a bit
